--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,56 +1,25 @@
 html {
-   font-size: 10px;
-   font-family: sans-serif;
-   font-weight: 500;
+   font-family: Montserrat, sans-serif;
+   color: #000000;
 }
 
-* {
-   box-sizing: border-box;
-}
+
 
 @media (max-width: 767.98px) {
-   html {
-      font-size: 8px;
+   body {
+      font-size: 0.9rem;
    }
 }
 
 @import '_header';
 @import '_fonts';
-
+@import '_top-dishes';
+@import '_events';
+@import '_try-today';
+@import '_booking';
 @import '_footer';
 
 
-
-//от 320px до 576px авто ширина контента и фиксированные отступы 10px. 
-//от 576px до 768px ширина 540px и динамические отступы. 
-//от 768px до 992px ширина 720px и динамические отступы. 
-//от 992px до 1200px ширина 960px и динамические отступы. 
-//от 1200px ширина 1180px и динамические отступы.
-
-section,   header,   footer {
-   padding: 0 10px;
-}
-
-@media (min-width: 575.98px) {
-   section,   header,   footer {
-      padding: 0 calc(50vw - 270px);
-   }
-}
-
-@media (min-width: 767.98px) {
-   section,   header,   footer {
-      padding: 0 calc(50vw - 360px);
-   }
-}
-
-@media (min-width: 991.98px) {
-   section,   header,   footer {
-      padding: 0 calc(50vw - 480px);
-   }
-}
-
 @media (min-width: 1199.98px) {
-   section,   header,   footer {
-      padding: 0 calc(50vw - 554px);
-   }
+   //когда больше 1200!
 }
