--- a/sass/_top-dishes.scss
+++ b/sass/_top-dishes.scss
@@ -1,15 +1,115 @@
 .top-dishes {
+  margin-top: 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 
-  &__title {}
+  &__title {
+    margin-bottom: 1rem;
+    font-family: "Fredericka";
+    font-size: 5rem;
+    text-transform: uppercase;
+  }
 
-  &__text {}
+  &__text {
+    max-width: 1055px;
+    margin: 0 10% 4rem;
+    font-size: 1.7rem;
+    font-weight: 400;
+    line-height: 29.17px;
+  }
 
-  &__items {}
+  &__items {
+    width: 100vw;
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.dish-item {
+  width: 33%;
+  min-width: 420px;
+  flex: 1 0 33%;
+
+  &__image {
+    background: url(/images/dishes-bg.svg) center/contain;
+    .dish-image-1{
+      padding: 0 15px;
+      height: 400px;
+      min-width: 400px;
+      background: url(/images/top-dishes-1.png)  no-repeat center/contain;
+    }
+    .dish-image-2{
+      padding: 0 15px;
+      height: 400px;
+      min-width: 400px;
+      background: url(/images/top-dishes-2.png) no-repeat center/contain ;
+    }
+    .dish-image-3{
+      padding: 0 15px;
+      height: 400px;
+      min-width: 400px;
+      background: url(/images/top-dishes-3.png) no-repeat center/contain ;
+    }
+  }
+
+  &__title {
+    margin-top: -8px;
+    margin-bottom: 1.5rem;
+    font-size: 2.1rem;
+    font-weight: 700;
+    line-height: 3.7rem;
+    text-transform: uppercase;
+  }
+
+  &__text {
+    margin-bottom: 4rem;
+    padding: 0 35px;
+    font-size: 1.7rem;
+    line-height: 2.083rem;
+  }
+
+  &__order-btn {
+    margin-bottom: 5rem;
+    width: 19.5rem;
+    height: 5.7rem;
+    background-color: #ffe001;
+    outline: none;
+    border: none;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    line-height: 3.75rem;
+    font-weight: 700;
+  }
+}
+
+
+
+
+
+
+
+////////vlojenie
+.top-dishes {
+
+  &__title {
+  }
+
+  &__text {
+  }
+
+  &__items {
+  }
 }
 
 .dish-item {
 
-  &__image {}
+  &__image {
+    .dish-image-1{}
+    .dish-image-2{}
+    .dish-image-3{}
+  }
 
   &__title {}
 
@@ -17,3 +117,4 @@
 
   &__order-btn {}
 }
+
